Implementação dos botões confirmar e adicionar ao carrinho funcionando corretamente.

--- a/EcommerceBack/wwwroot/css/style.css
+++ b/EcommerceBack/wwwroot/css/style.css
@@ -507,7 +507,7 @@ svg:hover circle {
 
 .container-geral {
     display: flex;
-    justify-content:center; 
+    flex-direction: column;
 }
 
 .container-frete{
