--- a/EcommerceBack/Views/PaginaInicial/PaginaInicial.cshtml
+++ b/EcommerceBack/Views/PaginaInicial/PaginaInicial.cshtml
@@ -10,15 +10,16 @@
     <div class="container">
       <ul class="navbar-nav">
         <li class="nav-item nav-item-cart">
-          <a class="nav-link custom-link" style="color: white;" href="index.html" ><i class="fas fa-home"></i> Tela inicial</a>
+            <a class="nav-link custom-link" style="color: white;" href="@Url.Action("PaginaInicial", "PaginaInicial")"><i class="fas fa-home"></i> Tela inicial</a>
         </li>
         
         <li class="nav-item nav-item-cart">
-          <a class="nav-link custom-link" style="color: white;" href="carrinho_compras.html" >
+                    <a class="nav-link custom-link" style="color: white;" href="@Url.Action("CarrinhoCompras", "CarrinhoCompras")">
             <i class="fas fa-shopping-cart"><span id="quantidade-item-cart">0</span></i>
           Carrinho
           </a>
         </li>
+
         <li class="nav-item">
           <a class="nav-link" href="#">
             <input type="text" class="form-control search-input" placeholder="Pesquisar produtos...">
@@ -80,6 +81,6 @@
 
 
     <link rel="stylesheet" href="~/css/style.css">
-    <script href="~/js/script.js"></script>
+    <script src="~/js/script.js"></script>
 
 </body>
