--- a/EcommerceBack/Views/Produto/Produto.cshtml
+++ b/EcommerceBack/Views/Produto/Produto.cshtml
@@ -12,10 +12,14 @@
         <div class="container">
             <ul class="navbar-nav">
                 <li class="nav-item nav-item-cart">
-                    <a class="nav-link custom-link" style="color: white;" href="index.html"><i class="fas fa-home"></i> Tela inicial</a>
+                    <a class="nav-link custom-link" style="color: white;" href="@Url.Action("PaginaInicial", "PaginaInicial")"><i class="fas fa-home"></i> Tela inicial</a>
                 </li>
+
                 <li class="nav-item nav-item-cart">
-                    <a class="nav-link custom-link" style="color: white;" href="carrinho_compras.html"><i class="fas fa-shopping-cart"></i> Carrinho</a>
+                    <a class="nav-link custom-link" style="color: white;" href="@Url.Action("CarrinhoCompras", "CarrinhoCompras")">
+                        <i class="fas fa-shopping-cart"><span id="quantidade-item-cart">0</span></i>
+                        Carrinho
+                    </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
@@ -69,35 +73,11 @@
                     <circle cx="7.5" cy="7.0" r="7.0" fill="url(#paint0_linear_8_1279)" onclick="alternarSelecao(this)" />
                     <defs>
                         <linearGradient id="paint0_linear_8_1279" x1="5" y1="1.5" x2="13" y2="14.5" gradientUnits="userSpaceOnUse">
-                            <stop stop-color="#15368A" />
+                            <stop stop-color="#FFFFFF" />
                             <stop offset="1" stop-color="#D1DEFF" />
                         </linearGradient>
                     </defs>
                 </svg>
-
-                <!-- Segundo SVG -->
-                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="28" viewBox="0 0 17 17" fill="none">
-                    <circle cx="7.5" cy="7.0" r="7.0" fill="url(#paint0_linear_8_1282)" onclick="alternarSelecao(this)" />
-                    <defs>
-                        <linearGradient id="paint0_linear_8_1282" x1="4" y1="1" x2="13.5" y2="15" gradientUnits="userSpaceOnUse">
-                            <stop stop-color="#2E2E2E" />
-                            <stop offset="1" stop-color="#A9A9A9" />
-                        </linearGradient>
-                    </defs>
-                </svg>
-
-                <!-- Terceiro SVG -->
-                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="28" viewBox="0 0 17 17" fill="none">
-                    <circle cx="7.5" cy="7.0" r="7.0" fill="url(#paint0_linear_8_1284)" onclick="alternarSelecao(this)" />
-                    <defs>
-                        <linearGradient id="paint0_linear_8_1284" x1="4" y1="3.5" x2="17" y2="17" gradientUnits="userSpaceOnUse">
-                            <stop stop-color="#EBEBEB" />
-                            <stop offset="0.9999" stop-color="#D7D7D7" />
-                            <stop offset="1" stop-color="#C4C4C4" />
-                        </linearGradient>
-                    </defs>
-                </svg>
-            </div>
 
             <div class="size">
                 <p class="tamanho">Tamanho</p>
@@ -107,7 +87,7 @@
                         var tamanho = estoqueItem.estq_tamanho;
                         var quantidadeEmEstoque = estoqueItem.estq_quantidade;
 
-                        var classeCSS = quantidadeEmEstoque == 0 ? "sem-estoque" : "sem-hover";
+                        var classeCSS = quantidadeEmEstoque == 0 ? "sem-estoque" : "";
 
                         <div class="numeracoes @classeCSS" data-quantidade="@quantidadeEmEstoque" onclick="alternarSelecaoElemento(this)">@tamanho</div>
                     }
@@ -123,15 +103,14 @@
             </div>
 
             <div class="comprar-adicionar">
-                <a asp-controller="CarrinhoCompras" asp-action="CarrinhoCompras" asp-route-cal_id="@calcados[0].cal_id">
-                    <button class="btn-azul" id="btn-comprar">Comprar</button>
-                </a>
-                <button class="btn-branco" onclick="addItemCart(this)" id="btn-add-carrinho">Adicionar ao carrinho</button>
-            </div>
+                <button onclick="adicionarItemAoCarrinho(1)" class="btn-azul" id="btn-comprar">Comprar</button>
+
+                <button class="btn-branco" onclick="adicionarItemAoCarrinho(1)" data-item-id="1">Adicionar ao carrinho</button>
+                </div>
         </div>
     </div>
 
     <link rel="stylesheet" href="~/css/style.css">
-    <script href="~/js/script.js"></script>
+    <script src="~/js/script.js"></script>
 
 </body>
