--- a/EcommerceBack/Views/CarrinhoCompras/CarrinhoCompras.cshtml
+++ b/EcommerceBack/Views/CarrinhoCompras/CarrinhoCompras.cshtml
@@ -120,7 +120,7 @@
                     </table>
                     <br>
 
-                    <a href=""><button class="btn-azul" onclick="addValorFrete(this)">Ir para o pagamento</button></a>
+                <a href="@Url.Action("FormaPagamento", "FormaPagamento")"><button class="btn-azul" onclick="addValorFrete(this)">Ir para o pagamento</button></a>
                 </div>
 
         </div>
