--- a/EcommerceBack/Views/FormaPagamento/FormaPagamento.cshtml
+++ b/EcommerceBack/Views/FormaPagamento/FormaPagamento.cshtml
@@ -135,8 +135,8 @@
                 </table>
             </div>
             <br>
-            <a href="pedidos_status_cliente.html">
-                <button class="btn-finaliza-pedido" id="confirmar-pedido">Finalizar Pedido</button>
+            <a>
+                <button class="btn-finaliza-pedido" id="finaliza-pedido">Finalizar Pedido</button>
             </a>
         </div>
 
