Nova lógica de Pedidos

--- a/EcommerceBack/Views/Shared/_Layout.cshtml
+++ b/EcommerceBack/Views/Shared/_Layout.cshtml
@@ -38,6 +38,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="CarrinhoCompras" asp-action="CarrinhoCompras">CarrinhoCompras</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PedidosCliente" asp-action="PedidosCliente">Pedidos</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="StatusPedidoCliente" asp-action="StatusPedidoCliente">StatusPedidoCliente</a>
+                        </li>
                     </ul>
                 </div>
             </div>
