--- a/EcommerceBack/wwwroot/css/site.css
+++ b/EcommerceBack/wwwroot/css/site.css
@@ -394,7 +394,7 @@ svg:hover circle {
     display: block;
 }
 
-.center-element {
+.center-elemento {
     display: flex;
     align-items: center;
 }
