--- a/EcommerceBack/Views/CarrinhoCompras/CarrinhoCompras.cshtml
+++ b/EcommerceBack/Views/CarrinhoCompras/CarrinhoCompras.cshtml
@@ -19,6 +19,7 @@
                         Carrinho
                     </a>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="#">
                         <input type="text" class="form-control search-input" placeholder="Pesquisar produtos...">
@@ -29,7 +30,7 @@
         <div class="navbar-nav navbar-nav-right">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" style="color: white;" href="pedidos_status_cliente.html"><i class="fas fa-file-alt"></i> Pedidos</a>
+                    <a class="nav-link" style="color: white;" href="@Url.Action("PedidosCliente", "PedidosCliente")"><i class="fas fa-file-alt"></i> Pedidos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" style="color: white;" href="#"> Login <i class="fas fa-user"></i></a>
