--- a/EcommerceBack/Views/PedidosCliente/PedidosCliente.cshtml
+++ b/EcommerceBack/Views/PedidosCliente/PedidosCliente.cshtml
@@ -10,15 +10,16 @@
         <div class="container">
             <ul class="navbar-nav">
                 <li class="nav-item nav-item-cart">
-                    <a class="nav-link custom-link" style="color: white;" href="index.html"><i class="fas fa-home"></i> Tela inicial</a>
+                    <a class="nav-link custom-link" style="color: white;" href="@Url.Action("PaginaInicial", "PaginaInicial")"><i class="fas fa-home"></i> Tela inicial</a>
                 </li>
 
                 <li class="nav-item nav-item-cart">
-                    <a class="nav-link custom-link" style="color: white;" href="carrinho_compras.html">
+                    <a class="nav-link custom-link" style="color: white;" href="@Url.Action("CarrinhoCompras", "CarrinhoCompras")">
                         <i class="fas fa-shopping-cart"><span id="quantidade-item-cart">0</span></i>
                         Carrinho
                     </a>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="#">
                         <input type="text" class="form-control search-input" placeholder="Pesquisar produtos...">
@@ -29,7 +30,7 @@
         <div class="navbar-nav navbar-nav-right">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" style="color: white;" href="pedidos_status_cliente.html"><i class="fas fa-file-alt"></i> Pedidos</a>
+                    <a class="nav-link" style="color: white;" href="@Url.Action("PedidosCliente", "PedidosCliente")"><i class="fas fa-file-alt"></i> Pedidos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" style="color: white;" href="#"> Login <i class="fas fa-user"></i></a>
@@ -64,29 +65,18 @@
                     <p class="descricao-produto">Cor: @item.cal_cor</p>
                 </div>
 
-                <div class="quantitade">
-                    <div class="top-element">
-                        <p>Quantidade</p>
-                    </div>
-                    <div class="center-element">
-                        <select class="select-input" id="select-quantidade" onchange="calcularValorTotal()" name="pedido">
-                            <option class="Option" value="1">1</option>
-                            <option class="Option" value="2">2</option>
-                            <option class="Option" value="3">3</option>
-                            <option class="Option" value="4">4</option>
-                            <option class="Option" value="5">5</option>
-                            <option class="Option" value="6">6</option>
-                        </select>
-                    </div>
-                </div>
             </div>
+
+                
+            
+        }
             <div class="center-acompanhar-pedido">
-                <a href="solicitar_devolucao.html">
-                    <button class="btn-azul-pedido" id="meuBotao">Acompanhar Pedido</button>
+                <a href="@Url.Action("StatusPedidoCliente", "StatusPedidoCliente")">
+                    <button id="acompanhaPedido" class="btn-azul-pedido">Acompanhar Pedido</button>
                 </a>
             </div>
-        }
     </div>
+        
     <br>
     }
 
