--- a/EcommerceBack/Views/FormaPagamento/FormaPagamento.cshtml
+++ b/EcommerceBack/Views/FormaPagamento/FormaPagamento.cshtml
@@ -41,10 +41,10 @@
         <div class="container">
             <ul class="navbar-nav">
                 <li class="nav-item nav-item-cart">
-                    <a class="nav-link custom-link" style="color: white;" href="index.html"><i class="fas fa-home"></i> Tela inicial</a>
+                    <a class="nav-link custom-link" style="color: white;" href="@Url.Action("PaginaInicial", "PaginaInicial")"><i class="fas fa-home"></i> Tela inicial</a>
                 </li>
                 <li class="nav-item nav-item-cart">
-                    <a class="nav-link custom-link" style="color: white;" href="carrinho_compras.html">
+                    <a class="nav-link custom-link" style="color: white;" href="@Url.Action("CarrinhoCompras", "CarrinhoCompras")">
                         <i class="fas fa-shopping-cart"><span id="quantidade-item-cart">0</span></i>
                         Carrinho
                     </a>
@@ -186,6 +186,6 @@
        
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
         <link rel="stylesheet" href="~/css/style.css">
-        <script src="~/js/script.js"></script>
+        @*<script src="~/js/script.js"></script>*@
         <script src="~/js/scriptFormaPagamento.js"></script>
 </body>
