--- a/EcommerceBack/Views/Shared/_Layout.cshtml
+++ b/EcommerceBack/Views/Shared/_Layout.cshtml
@@ -45,6 +45,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="StatusPedidoCliente" asp-action="StatusPedidoCliente">StatusPedidoCliente</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Devolucao" asp-action="Devolucao">Devolucao</a>
+                        </li>
                     </ul>
                 </div>
             </div>
