--- a/EcommerceBack/Views/Cliente/Cliente.cshtml
+++ b/EcommerceBack/Views/Cliente/Cliente.cshtml
@@ -294,6 +294,25 @@
         </div>
     </div>
 
+    <div class="overlay-transacoes" id="overlay-transacoes">
+        <div class="popup-transacoes" id="popup-transacoes">
+            <div id="pedidoGrid" class="container mt-4">
+                <button id="fechar-transacao" class="close-button"><i class="fas fa-times"></i></button>
+
+                <h1 class="text-center">Lista de Transações</h1>
+                <div class="row grid-header">
+                    <div class="col">Código do pedido</div>
+                    <div class="col">Nome do Cliente</div>
+                    <div class="col">Valor Total</div>
+                    <div class="col">Valor Frete</div>
+                    <div class="col">Valor dos Produtos</div>
+                    <div class="col">Endereço de Entrega</div>
+                </div>
+                <div id="resultadoPesquisaTransacoes">
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="overlay-endereco" id="overlay-endereco">
         <div class="popup-endereco" id="popup-endereco">
