--- a/EcommerceBack/wwwroot/css/site.css
+++ b/EcommerceBack/wwwroot/css/site.css
@@ -767,6 +767,54 @@ h1, h2 {
     overflow-y: auto;
 }
 
+.overlay-pedidoadmin {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    align-items: center;
+    justify-content: center;
+    overflow: auto;
+}
+
+.popup-pedidoadmin {
+    display: none;
+    background-color: white;
+    border-radius: 8px;
+    padding: 44px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    max-height: 95%;
+    overflow-y: auto;
+    width: 50%;
+}
+
+.overlay-transacoes {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    align-items: center;
+    justify-content: center;
+    overflow: auto;
+}
+
+.popup-transacoes {
+    display: none;
+    background-color: white;
+    border-radius: 8px;
+    padding: 44px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    max-height: 95%;
+    overflow-y: auto;
+    width: 50%;
+}
+
 .overlay-cliente {
     display: none;
     position: fixed;
