Lógica para a quantidade e tamanho do carrinho

--- a/EcommerceBack/Views/Produto/Produto.cshtml
+++ b/EcommerceBack/Views/Produto/Produto.cshtml
@@ -88,7 +88,7 @@
 
                         var classeCSS = quantidadeEmEstoque == 0 ? "sem-estoque" : "";
 
-                        <div class="numeracoes @classeCSS" data-quantidade="@quantidadeEmEstoque" onclick="alternarSelecaoElemento(this)">@tamanho</div>
+                            <div class="numeracoes @classeCSS" data-quantidade="@quantidadeEmEstoque" onclick="alternarSelecaoElemento(this, @calcados[0].cal_id)">@tamanho</div>
                     }
                 </div>
                 <p class="valores-produto"><strong>R$ @calcados[0].cal_valor</strong> à vista</p>
