--- a/EcommerceBack/wwwroot/css/style.css
+++ b/EcommerceBack/wwwroot/css/style.css
@@ -379,6 +379,24 @@ svg:hover circle {
     display: block;
 }
 
+.btn-azul-pedido-geral {
+    width: 250.324px;
+    height: 50.751px;
+    flex-shrink: 0;
+    border-radius: 4.138px;
+    border: 0.696px solid #294DAA;
+    margin-left: 100px;
+    background: #15368A;
+    color: #FFF;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 13.993px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    display: block;
+}
+
 .center-element {
     display: flex;
     align-items: center;
